_style/projects.css
.project-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  gap: 1.5rem;
}

.project-card {
  background: var(--code-background);
  padding: 1rem;
  border-radius: 8px;
  display: flex;
  align-items: center;
  gap: 1rem;
  width: 100%;
}

.project-text {
  flex: 1;
  min-width: 0;
}

.project-text h2 {
  margin-top: 0px;
  border-bottom: 1px solid var(--border-accent);
  color: var(--accent);
}

.project-card img {
  border-radius: 10%;
  max-width: 350px;
  width: 100%;
  height: auto;
  margin-left: auto;
}

.project-card > span:first-child {
  flex: 1;
  min-width: 0;
}

@media (max-width: 768px) {
  .project-card {
    flex-direction: column;
  }
  .project-card img {
    margin-left: 0;
    margin-bottom: 1rem;
  }
}

